force-app/main/default/objects/RH_Quote_Configuration__mdt/RH_Quote_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Motivation Quote Configuration</label>
    <pluralLabel>Motivation Quote Configurations</pluralLabel>
</CustomObject>