force-app/main/default/objects/RH_Quote_Configuration__mdt/fields/boatApiKey__c.field-meta.xml
<CustomField>
    <fullName>boatApiKey__c</fullName>
    <defaultValue>$Setup.RH_Settings__c.RH_TelegramBotAPIKey__c</defaultValue>
    <label>boat Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>