force-app/main/default/objects/RH_Quote_Configuration__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>