force-app/main/default/objects/RH_Quote_Configuration__mdt/fields/serverEndpoint__c.field-meta.xml
<CustomField>
    <fullName>serverEndpoint__c</fullName>
    <label>serverEndpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>